# CO2Shift

./: .gitignore  .zenodo.json  CITATION.cff  README.md  pyproject.toml
colab/: C02Shift_p10_gate.ipynb  C02Shift_quickstart.ipynb  README.md  bootstrap_public_data.py  wave_temporal_runner.ipynb
configs/: field_seed_sweep_colab.yaml  jax_wave_lab.yaml  paper_evidence.yaml  paper_proto.yaml  paper_proto_seed_sweep.yaml  paper_temporal_proto.yaml  paper_wave_temporal_colab.yaml  paper_wave_temporal_proto.yaml  sleipner_manifest.yaml  sleipner_manifest_p10.yaml  sleipner_p07_11inline.yaml  sleipner_p07_11inline_temporal_structured.yaml  sleipner_p07_11inline_temporal_structured_volume.yaml  sleipner_p07_11inline_volume.yaml  sleipner_p07_temporal_11inline.yaml  sleipner_p07_temporal_11inline_volume.yaml  sleipner_p07_wave_temporal_11inline.yaml  sleipner_p07_wave_temporal_11inline_volume.yaml  sleipner_p07_wave_temporal_colab.yaml  sleipner_p07_wave_temporal_colab_lowmem_isolated.yaml  sleipner_p10_11inline.yaml  sleipner_p10_11inline_temporal_structured.yaml  sleipner_p10_11inline_temporal_structured_volume.yaml  sleipner_p10_11inline_volume.yaml  sleipner_p10_temporal_11inline.yaml  sleipner_p10_temporal_11inline_volume.yaml  sleipner_p10_wave_temporal_11inline.yaml  sleipner_p10_wave_temporal_11inline_volume.yaml  sleipner_p10_wave_temporal_colab.yaml  sleipner_p10_wave_temporal_colab_lowmem_isolated.yaml  sleipner_volume.yaml  smoke.yaml
docs/: first_paper_protocol.md
examples/: sleipner_manifest.p07_11inline.json  sleipner_manifest.p10.json  (+3 more)
jobs/: run_matrix.json  (+4 more)
(+47 files in other folders)
